--- a/layout/all_schools.html
+++ b/layout/all_schools.html
@@ -62,10 +62,12 @@
                                     <img src="img/Военно-дипломатическая академия/main.jpg" alt="armed_school">
                                 </div>
                                 <div class="armed-list__info info">
-                                    <div class="info__name"></div>
-                                    <div class="info__description"></div>
-                                    <div class="info__button-wrapper"><a href="#" class="info__button"></a></div>
-                                    <div class="info__geo"></div>
+                                    <div class="info__name">Наименование: Военная академия Генерального штаба</div>
+                                    <div class="info__description">Военная ордена Ленина, Краснознамённая, орденов Суворова и Кутузова академия Генерального штаба Вооружённых сил
+                                    Российской Федерации — высшее военно-учебное заведение для обучения, подготовки и повышения квалификации высших и
+                                    старших офицеров Вооружённых сил, других министерств и ведомств Российской Федерации, руководителей и должно...</div>
+                                    <div class="info__button-wrapper"><a href="#" class="info__button">Читать далее...</a></div>
+                                    <div class="info__geo">Место нахождения: Москва, Улица Гринева</div>
                                 </div>
                             </li>
                         </ul>
