--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -157,16 +157,31 @@ main {
 .info {
     display: flex;
     flex-direction: column;
+    font-size: 20px;
 }
 
 .info__name {
-
+    margin: 0 0 20px 0;
 }
 
-.info__description {}
-
-.info__button-wrapper {}
-
+.info__description {
+    margin: 0 0 30px 0;
+}
 .info__geo {}
+.info__button-wrapper {
+    text-align: right;
+    margin: 0 0 30px 0;
+}
 
-.info__button {}
+.info__button {
+    background-color: #d7d5d5;
+    border-radius: 15px;
+    padding: 9px;
+    text-decoration: none;
+    color: indigo;
+}
+.info__button:hover {
+    background-color: #e4e0e0;
+    box-shadow: 0 0 15px rgb(153, 243, 174);
+    color: rgb(42, 235, 235);
+}
