--- a/arm_forces/armed_universities/templates/armed_universities/super.html
+++ b/arm_forces/armed_universities/templates/armed_universities/super.html
@@ -2,31 +2,55 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;300;400;500;700&display=swap">
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'armed_universities/css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'armed_universities/css/style.css' %}">
-    <title>{{ title }}</title>
+    <title>Armed forces schools</title>
 </head>
+
 <body>
     <div class="wrapper">
-        <header>
+        <header class="header">
             <div class="header__container">
-
+                <!-- <div class="header__logo logo">
+                    <a href="/"><img src="img/logo2.png" alt="" class="logo__icon"></a>
+                </div> -->
+                <nav class="header__menu menu">
+                    <ul class="menu__list">
+                        <a href="http://google.com" class="menu__link" target="_blank">
+                            <li class="menu__item">Главная</li>
+                        </a>
+                        <a href="http://google.com" class="menu__link" target="_blank">
+                            <li class="menu__item">Все заведения</li>
+                        </a>
+                        <a href="http://google.com" class="menu__link" target="_blank">
+                            <li class="menu__item">После 9 класса</li>
+                        </a>
+                        <a href="#" class="menu__link" target="_blank">
+                            <li class="menu__item">После 11 класса</li>
+                        </a>
+                        <a href="#" class="menu__link" target="_blank">
+                            <li class="meny__item">О проекте</li>
+                        </a>
+                    </ul>
+                </nav>
             </div>
         </header>
-        <main>
-            {% block main %}
-            {% endblock main %}
-        </main>
-        <footer>
+        {% block main %}
+        {% endblock main %}
+        <footer class="footer">
             <div class="footer__container">
-
             </div>
         </footer>
     </div>
-
 </body>
+
 </html>
